<resources>
    <string name="app_name">Login Demo</string>
    <string name="sign_into_google">Sign into Google</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_image">User image</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="id">ID</string>
</resources>